# Proyecto_algoritmos

./: Point.h  PointQuadTree.cpp  PointQuadtree.h  Quadtree.h  README.md  Rectangle.h  main.cpp  plot_results.py  results.csv  visualize_pointquadtree_structure.py
proyecto_enC/: CMakeLists.txt  Point.h  PointQuadtree.cpp  PointQuadtree.h  Quadtree.cpp  Quadtree.h  Rectangle.h  main.cpp
proyecto_visualJS/: index.html  particle.js  quadtree.js  sketch.js
proyecto_visual_JS/: index.html  particle.js  quadtree.js  sketch.js
